# Haskell-learning

./: 3_longest_substring.go  README.md  baby.hs
IO/: README.md  askForNumber.hs  byteStringCopy.hs  color.hs  deleteTodo.hs  girlfriends.hs  girlfriends.txt  helloworld.hs  interact.hs  random.hs  reverseword.hs  todo.hs  todo.txt  todolist.hs
applicative-functor/: README.md  test.hs
fun/: README.md  roadSystem.hs  rpn.hs
high-order-functions/: README.md  exer.hs
module/: Geometry.hs  README.md  exer.hs
module/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
monad/: README.md  conclusions.md  exer.hs  test.hs
monoid/: README.md  exer.hs
real-world-haskell/: README.md
real-world-haskell/err-handling/: ParseInt.hs  README.md  divBy.hs  divBy2.hs  dynexc.hs  input.txt  output.txt  safeTail.hs  toupper-impch.hs
real-world-haskell/json/: Main.hs  Prettify.hs  PutJSON.hs  SimpleJSON.hs  mypretty.cabal  test.hs
real-world-haskell/monad-transformer/: LocalReader.hs  README.md  Reader.hs  UglyStack.hs  UglyStack2.hs  exer.hs  identity.hs  passphrase-monad-transformer.hs  passphrase.hs  state.hs  test.hs  wheels.hs
real-world-haskell/test/: QC-basics.hs
types-typeclasses/: README.md  Shapes.hs  exer.hs
zipper/: README.md  tree.hs
zipper/exer/: test.hs
